plugins {
    id 'java'
}

group 'ru.mail.polis.homework'
version '1.0-SNAPSHOT'

sourceCompatibility = 1.8

compileJava.options.encoding = 'UTF-8'

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

repositories {
    mavenCentral()
}

dependencies {
    testImplementation group: 'junit', name: 'junit', version: '4.12'
    testImplementation group: 'org.mockito', name: 'mockito-core', version: '2.23.0'
    testImplementation group: 'commons-io', name: 'commons-io', version: '2.6'

}
